Quick fix to enforce dark mode!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,21 @@ nav a.current {
 .ng-color {
   color: #cf4646;
 }
+
+:root {
+  --bg: #212121;
+  --accent-bg: #2b2b2b;
+  --text: #dcdcdc;
+  --text-light: #ababab;
+  --border: #666;
+  --accent: #ffb300;
+  --accent-light: #ffecb3;
+  --code: #f06292;
+  --preformatted: #ccc;
+  --disabled: #111;
+}
+
+img,
+video {
+  opacity: 0.6;
+}
